Remove clear fix, add fixed height for weather forecasts (no more overlapping)

--- a/css/style.css
+++ b/css/style.css
@@ -128,11 +128,6 @@ div.tile.smalltile span.tiletitle i.wi {
 	font-size:8vmin;
 }
 
-
-.clearfix-big {
-	clear:both;
-}
-
 /* 
 	Tile size on home page for portrait mode / smartphones
 */
@@ -153,13 +148,6 @@ div.tile.smalltile span.tiletitle i.wi {
 	div.tile.smalltile span.tiletitle {
 		font-size:1em;
 		font-size:3vmin;
-	}
-
-	.clearfix-small {
-		clear:both;
-	}
-	.clearfix-big {
-		clear:none;
 	}
 }
 
@@ -183,13 +171,6 @@ div.tile.smalltile span.tiletitle i.wi {
 	div.tile.smalltile span.tiletitle {
 		font-size:1em;
 		font-size:3vmin;
-	}
-
-	.clearfix-small {
-		clear:both;
-	}
-	.clearfix-big {
-		clear:none;
 	}
 }
 
@@ -516,4 +497,9 @@ h2 {
 
 div.spacer {
 	height:35px;
+}
+
+.weatherforecast-big,
+.weatherforecast-small {
+	height:150px;
 }
